# py_docx2pdfmake

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/docx2pdfmake/: __init__.py  cli.py  content_builder.py  converter.py  header_footer.py  image_handler.py  models.py  style_resolver.py
tests/: test_converter.py  test_models.py
