[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx2pdfmake"
version = "0.1.0"
description = "Convert .docx files to pdfmake Document Definition Objects (DDO)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.1.0",
]

[project.scripts]
docx2pdfmake = "docx2pdfmake.cli:main"

[project.urls]
Repository = "https://github.com/albiorix70/docx2pdfmake"

[tool.hatch.build.targets.wheel]
packages = ["src/docx2pdfmake"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
